brighter background with more colors

--- a/wp-content/themes/bonpress-child/style.css
+++ b/wp-content/themes/bonpress-child/style.css
@@ -25,8 +25,7 @@ body{
 	font-size: 1.6rem;
 	line-height: 160%;
 	border: 0;
-	background: #4e3c40 url(/wp-content/themes/bonpress-child/images/space-and-hills2.jpg) no-repeat 0px -30px;
-	background-color: #231f20;
+	background: #192922 url(/wp-content/themes/bonpress-child/images/space-and-hills3.jpg) no-repeat;
 	background-attachment: fixed;
 	background-size: contain;
 }
