--- a/wp-content/themes/bonpress-child/style.css
+++ b/wp-content/themes/bonpress-child/style.css
@@ -38,6 +38,9 @@ body{
 	-webkit-border-radius: 15px;
 	-moz-border-radius: 15px;
 	border-radius: 15px;
+	padding: 40px 50px 30px 50px;
+	border-bottom: 4px solid #234;
+	border-top: 4px solid #234;
 }
 
 .wrapper, #footer {
@@ -96,6 +99,7 @@ body{
 	font-weight: 700;
 	display: inline-block;
 	font-size: 1.6rem;
+	letter-spacing: 0.15rem;
 }
 #menu li:hover {
 	background: none;
@@ -107,12 +111,7 @@ body{
 	background: #395571;
 }
 
-.entry {
-	padding: 40px 50px 30px 50px;
-	border-bottom: 4px solid #234;
-	border-top: 4px solid #234;
 
-}
 .page .entry {
 	border-bottom: 4px solid #234;
 }
@@ -166,14 +165,29 @@ body{
 
 /* Sidebar */
 #sidebar {
-	padding: 20px 25px 5px;
-	margin: 15px 0 0;
-	background: #234;
+	padding: 10px 15px 5px;
+	margin: 10px 0 0;
+	background: #0E1713;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	width: 95%;
+	float: right;
 }
 #sidebar .widget {
 	font-size: 14px;
 	font-size: 1.4rem;
+	margin:0;
 }
+#sidebar .widget a {
+	font-weight: 400;
+}
+
+.lwa {margin:0;}
+.lwa-username input, .lwa-password input {
+	padding: 2px;
+}
+
 .nav_menu-3 a {
 	width: 100%;
 	display: block;
@@ -188,9 +202,11 @@ body{
 	background: none;
 	text-align: left;
 	font-family: inherit;
-	font-size: 1.6rem;
-	text-transform: none;
+	font-size: 14px;
+	font-size: 1.4rem;
 	padding: 0;
+	text-transform: uppercase;
+	margin: 0;
 }
 
 /* Footer */
